[gd_scene load_steps=7 format=3 uid="uid://bxemp6owpggy"]

[ext_resource type="Script" path="res://rover.gd" id="1_8iqnh"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_m8cvc"]
albedo_color = Color(0.937255, 0.4, 0.466667, 1)

[sub_resource type="BoxMesh" id="BoxMesh_lob0f"]
material = SubResource("StandardMaterial3D_m8cvc")
size = Vector3(1.5, 1, 3)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_2oe1i"]
points = PackedVector3Array(-0.738095, 0.5, -1.45426, 0.75, -0.268284, 1.43118, 0.75, -0.492064, 1.43118, -0.738095, 0.5, 1.45426, -0.738095, -0.5, 1.45426, 0.75, -0.492064, -1.43118, 0.75, 0.49216, -1.43146, -0.738095, -0.5, -1.45426, 0.75, 0.49216, 1.43146)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_68ods"]
albedo_color = Color(0.117647, 0.117647, 0.117647, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_7msfv"]
material = SubResource("StandardMaterial3D_68ods")
height = 0.404

[node name="rover" type="Node3D"]
script = ExtResource("1_8iqnh")

[node name="VehicleBody3D" type="VehicleBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="VehicleBody3D"]
mesh = SubResource("BoxMesh_lob0f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="VehicleBody3D"]
shape = SubResource("ConvexPolygonShape3D_2oe1i")

[node name="FrontRight" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.26923, -0.924278, -1.2414)
use_as_traction = true
use_as_steering = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="VehicleBody3D/FrontRight"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_7msfv")

[node name="MiddleRight" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.26923, -0.924278, 9.53674e-07)
use_as_traction = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="VehicleBody3D/MiddleRight"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_7msfv")

[node name="BackRight" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.26923, -0.924278, 1.32262)
use_as_traction = true
use_as_steering = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="VehicleBody3D/BackRight"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_7msfv")

[node name="FrontLeft" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.27714, -0.924278, -1.2414)
use_as_traction = true
use_as_steering = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="VehicleBody3D/FrontLeft"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_7msfv")

[node name="MiddleLeft" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.27714, -0.924278, 9.53674e-07)
use_as_traction = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="VehicleBody3D/MiddleLeft"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_7msfv")

[node name="BackLeft" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.27714, -0.924278, 1.32262)
use_as_traction = true
use_as_steering = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="VehicleBody3D/BackLeft"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_7msfv")

[node name="Camera3D" type="Camera3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.457738, 1.5542, 5.07729)
